# claude-super-easy-bot

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ai-config.json  alembic.ini  api_server.py  arbitrage_backend.py  arbitrage_dashboard.tsx  docker-compose.db.yml  docker-compose.nodes.yml  extension_test_results.json  flash_loan_executor.py  node-config.yaml  pyproject.toml  requirements.txt  sample_function.py  setup_instructions.md  test_extensions.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  security.yml
alembic/: env.py  script.py.mako
database/: __init__.py  cache.py  connection.py  init.sql  models.py  repository.py
infrastructure/: __init__.py  connection_manager.py  health_monitor.py  node_config.py
node-configs/: bor-polygon.toml  geth-ethereum.toml  haproxy.cfg  heimdall-polygon.toml
scripts/: backup-database.sh  backup-redis.sh  check-node-health.sh  cleanup-old-data.py  deploy-nodes.sh  restart-node.sh  restore-database.sh
